# Lidar_Global_Localization

./: CMakeLists.txt  package.xml  setup.py
include/: GlobalLocalizer.h  LidarFrame.h
launch/: gl.launch
scripts/: data_saver.py  multi_topic_synchronizer_with_visualizable_odom.py
src/: GlobalLocalizer.cpp  node.cpp
